--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,12 @@ html {
   font-size: 62.5%; /* převede se 10px (kvůli používání rem) na procenta 10/16 na procenta, definuje kolik je 1rem */
   scroll-behavior: smooth;
   box-sizing: border-box;
+  overflow-x: hidden;
+}
+@media only screen and (max-width: 75em) {
+  html {
+    font-size: 50%;
+  }
 }
 
 body {
@@ -24,6 +30,17 @@ body {
   display: grid;
   grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
   grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
+}
+@media only screen and (max-width: 62.5em) {
+  .container {
+    grid-template-rows: 6rem 80vh min-content 40vw repeat(3, min-content);
+    grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
+  }
+}
+@media only screen and (max-width: 50em) {
+  .container {
+    grid-template-rows: 6rem calc(100vh - 6rem);
+  }
 }
 
 .heading-4, .heading-3, .heading-2, .heading-1 {
@@ -98,6 +115,14 @@ body {
   display: flex;
   justify-content: center;
 }
+@media only screen and (max-width: 62.5em) {
+  .sidebar {
+    grid-column: 1/-1;
+    grid-row: 1/2;
+    justify-content: flex-end;
+    align-items: center;
+  }
+}
 
 .nav-btn {
   border: none;
@@ -120,6 +145,18 @@ body {
 .nav-btn::after {
   transform: translateY(1.3rem);
 }
+@media only screen and (max-width: 62.5em) {
+  .nav-btn {
+    margin-top: 0;
+    margin-right: 3rem;
+  }
+  .nav-btn::before {
+    transform: translateY(-1.2rem);
+  }
+  .nav-btn::after {
+    transform: translateY(1rem);
+  }
+}
 
 .header {
   background-color: #54483a;
@@ -130,10 +167,20 @@ body {
   padding: 8rem;
   padding-top: 4rem;
   display: grid;
-  grid-template-rows: 1fr min-content 6rem 1fr;
-  grid-template-columns: max-content;
+  grid-template-rows: 1fr min-content minmax(6rem, min-content) 1fr;
+  grid-template-columns: minmax(min-content, max-content);
   row-gap: 1.5rem;
   justify-content: center;
+}
+@media only screen and (max-width: 50em) {
+  .header {
+    grid-column: 1/-1;
+  }
+}
+@media only screen and (max-width: 37.5em) {
+  .header {
+    padding: 5rem;
+  }
 }
 .header__logo {
   height: 3rem;
@@ -158,12 +205,15 @@ body {
   background-color: currentColor;
 }
 .header__seenon-logos {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
   gap: 3rem;
-  justify-content: space-between;
+  justify-items: center;
+  align-items: center;
 }
 .header__seenon-logos img {
-  height: 2.5rem;
+  max-height: 2.5rem;
+  max-width: 100%;
   filter: brightness(70%);
 }
 
@@ -177,12 +227,27 @@ body {
   row-gap: 2rem;
   justify-items: center;
 }
+@media only screen and (max-width: 50em) {
+  .realtors {
+    grid-column: 1/-1;
+  }
+}
 .realtors__list {
   display: grid;
   grid-template-columns: min-content max-content;
   column-gap: 2rem;
   row-gap: 5vh;
   align-items: center;
+}
+@media only screen and (max-width: 50em) {
+  .realtors__list {
+    grid-template-columns: repeat(3, min-content max-content);
+  }
+}
+@media only screen and (max-width: 37.5em) {
+  .realtors__list {
+    grid-template-columns: min-content max-content;
+  }
 }
 .realtors__img {
   width: 7rem;
@@ -225,10 +290,17 @@ body {
   background-color: #c69963;
   grid-column: full-start/col-end 4;
   background-image: linear-gradient(rgba(198, 153, 99, 0.5), rgba(198, 153, 99, 0.5)), url(../img/back.jpg);
+  background-size: cover;
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: repeat(6, 1fr);
   align-items: center;
+}
+@media only screen and (max-width: 50em) {
+  .story__pictures {
+    grid-column: 1/-1;
+    padding: 6rem;
+  }
 }
 .story__img--1 {
   width: 100%;
@@ -236,12 +308,24 @@ body {
   grid-row: 2/6;
   box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.1);
 }
+@media only screen and (max-width: 50em) {
+  .story__img--1 {
+    grid-column: 1/5;
+    grid-row: 1/-1;
+  }
+}
 .story__img--2 {
   width: 115%;
   grid-column: 4/7;
   grid-row: 4/6;
   z-index: 20;
   box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.2);
+}
+@media only screen and (max-width: 50em) {
+  .story__img--2 {
+    grid-row: 1/-1;
+    width: 100%;
+  }
 }
 .story__content {
   background-color: #f9f7f6;
@@ -251,6 +335,12 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
+}
+@media only screen and (max-width: 50em) {
+  .story__content {
+    grid-column: 1/-1;
+    grid-row: 5/6;
+  }
 }
 .story__text {
   font-size: 1.5rem;
@@ -332,61 +422,154 @@ body {
   gap: 1.5rem;
   padding: 1.5rem;
 }
+@media only screen and (max-width: 37.5em) {
+  .gallery {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto;
+    gap: 1rem;
+    justify-content: center;
+    max-width: 100vw;
+  }
+}
 .gallery__item--1 {
   grid-column: 1/span 2;
   grid-row: 1/span 2;
+}
+@media only screen and (max-width: 37.5em) {
+  .gallery__item--1 {
+    grid-column: auto;
+    grid-row: auto;
+  }
 }
 .gallery__item--2 {
   grid-column: 3/span 3;
   grid-row: 1/span 3;
 }
+@media only screen and (max-width: 37.5em) {
+  .gallery__item--2 {
+    grid-column: auto;
+    grid-row: auto;
+  }
+}
 .gallery__item--3 {
   grid-column: 6/7;
   grid-row: 1/span 2;
+}
+@media only screen and (max-width: 37.5em) {
+  .gallery__item--3 {
+    grid-column: auto;
+    grid-row: auto;
+  }
 }
 .gallery__item--4 {
   grid-column: 7/span 2;
   grid-row: 1/span 2;
 }
+@media only screen and (max-width: 37.5em) {
+  .gallery__item--4 {
+    grid-column: auto;
+    grid-row: auto;
+  }
+}
 .gallery__item--5 {
   grid-column: 1/span 2;
   grid-row: 3/span 3;
+}
+@media only screen and (max-width: 37.5em) {
+  .gallery__item--5 {
+    grid-column: auto;
+    grid-row: auto;
+  }
 }
 .gallery__item--6 {
   grid-column: 3/span 2;
   grid-row: 4/span 2;
 }
+@media only screen and (max-width: 37.5em) {
+  .gallery__item--6 {
+    grid-column: auto;
+    grid-row: auto;
+  }
+}
 .gallery__item--7 {
   grid-column: 5/6;
   grid-row: 4/5;
+}
+@media only screen and (max-width: 37.5em) {
+  .gallery__item--7 {
+    grid-column: auto;
+    grid-row: auto;
+  }
 }
 .gallery__item--8 {
   grid-column: 6/span 2;
   grid-row: 3/span 2;
 }
+@media only screen and (max-width: 37.5em) {
+  .gallery__item--8 {
+    grid-column: auto;
+    grid-row: auto;
+  }
+}
 .gallery__item--9 {
   grid-column: 8/9;
   grid-row: 3/span 3;
+}
+@media only screen and (max-width: 37.5em) {
+  .gallery__item--9 {
+    grid-column: auto;
+    grid-row: auto;
+  }
 }
 .gallery__item--10 {
   grid-column: 1/2;
   grid-row: 6/span 2;
 }
+@media only screen and (max-width: 37.5em) {
+  .gallery__item--10 {
+    grid-column: auto;
+    grid-row: auto;
+  }
+}
 .gallery__item--11 {
   grid-column: 2/span 2;
   grid-row: 6/span 2;
+}
+@media only screen and (max-width: 37.5em) {
+  .gallery__item--11 {
+    grid-column: auto;
+    grid-row: auto;
+  }
 }
 .gallery__item--12 {
   grid-column: 4/5;
   grid-row: 6/span 2;
 }
+@media only screen and (max-width: 37.5em) {
+  .gallery__item--12 {
+    grid-column: auto;
+    grid-row: auto;
+  }
+}
 .gallery__item--13 {
   grid-column: 5/span 3;
   grid-row: 5/span 3;
 }
+@media only screen and (max-width: 37.5em) {
+  .gallery__item--13 {
+    grid-column: auto;
+    grid-row: auto;
+  }
+}
 .gallery__item--14 {
   grid-column: 8/9;
   grid-row: 6/span 2;
+}
+@media only screen and (max-width: 37.5em) {
+  .gallery__item--14 {
+    grid-column: auto;
+    grid-row: auto;
+  }
 }
 .gallery__img {
   width: 100%;
