--- a/sass/_gallery.scss
+++ b/sass/_gallery.scss
@@ -10,75 +10,153 @@
   gap: 1.5rem;
   padding: 1.5rem;
 
+  @media only screen and (max-width: $bp-small) {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto;
+    gap: 1rem;
+    justify-content: center;
+    max-width: 100vw;
+  }
+
   &__item {
     &--1 {
       grid-column: 1 / span 2;
       grid-row: 1 / span 2;
+
+      @media only screen and (max-width: $bp-small) {
+        grid-column: auto;
+        grid-row: auto;
+      }
     }
 
     &--2 {
       grid-column: 3 / span 3;
       grid-row: 1 / span 3;
+
+      @media only screen and (max-width: $bp-small) {
+        grid-column: auto;
+        grid-row: auto;
+      }
     }
 
     &--3 {
       grid-column: 6 / 7;
       grid-row: 1 / span 2;
+
+      @media only screen and (max-width: $bp-small) {
+        grid-column: auto;
+        grid-row: auto;
+      }
     }
 
     &--4 {
       grid-column: 7 / span 2;
       grid-row: 1 / span 2;
+
+      @media only screen and (max-width: $bp-small) {
+        grid-column: auto;
+        grid-row: auto;
+      }
     }
 
     &--5 {
       grid-column: 1 / span 2;
       grid-row: 3 / span 3;
+
+      @media only screen and (max-width: $bp-small) {
+        grid-column: auto;
+        grid-row: auto;
+      }
     }
 
     &--6 {
       grid-column: 3 / span 2;
       grid-row: 4 / span 2;
+
+      @media only screen and (max-width: $bp-small) {
+        grid-column: auto;
+        grid-row: auto;
+      }
     }
 
     &--7 {
       grid-column: 5 / 6;
       grid-row: 4 / 5;
+
+      @media only screen and (max-width: $bp-small) {
+        grid-column: auto;
+        grid-row: auto;
+      }
     }
 
     &--8 {
       grid-column: 6 / span 2;
       grid-row: 3 / span 2;
+
+      @media only screen and (max-width: $bp-small) {
+        grid-column: auto;
+        grid-row: auto;
+      }
     }
 
     &--9 {
       grid-column: 8 /9;
       grid-row: 3 / span 3;
+
+      @media only screen and (max-width: $bp-small) {
+        grid-column: auto;
+        grid-row: auto;
+      }
     }
 
     &--10 {
       grid-column: 1 / 2;
       grid-row: 6 / span 2;
+
+      @media only screen and (max-width: $bp-small) {
+        grid-column: auto;
+        grid-row: auto;
+      }
     }
 
     &--11 {
       grid-column: 2 / span 2;
       grid-row: 6 / span 2;
+
+      @media only screen and (max-width: $bp-small) {
+        grid-column: auto;
+        grid-row: auto;
+      }
     }
 
     &--12 {
       grid-column: 4 / 5;
       grid-row: 6 / span 2;
+
+      @media only screen and (max-width: $bp-small) {
+        grid-column: auto;
+        grid-row: auto;
+      }
     }
 
     &--13 {
       grid-column: 5 / span 3;
       grid-row: 5 / span 3;
+
+      @media only screen and (max-width: $bp-small) {
+        grid-column: auto;
+        grid-row: auto;
+      }
     }
 
     &--14 {
       grid-column: 8 / 9;
       grid-row: 6 / span 2;
+
+      @media only screen and (max-width: $bp-small) {
+        grid-column: auto;
+        grid-row: auto;
+      }
     }
   }
 
